@@ -201,6 +201,11 @@ Extension Modules
 
 - Issue #1040026: Fix os.times result on systems where HZ is incorrect.
 
+Build
+-----
+
+- Link the shared python library with $(MODLIBS).
+
 
 What's New in Python 2.6.1
 ==========================
